made projects page more friendly for adding more content

--- a/src/styles/components/Cards/contentcard.scss
+++ b/src/styles/components/Cards/contentcard.scss
@@ -2,9 +2,10 @@
 
 .card {
     @include box-shadow(0px, 8px, 16px, rgba(0, 0, 0, 0.6));
-    @include width-height(360px, min-content);
     @include transition($time-in: 0.1s, $time-out: 0.2s);
     @include transform(scale(100%));
+    height: min-content;
+    width: 375px;
     backdrop-filter: blur(3px) brightness(130%);
     padding: 2rem 1.75rem;
     margin: 1rem;
@@ -29,7 +30,8 @@
     }
 
     p {
-        @include font($size: 16px, $color: $moonSilver, $weight: 400, $align: left);
+        @include font($size: 16px, $color: $moonSilver, $weight: 400, $align: left, $leading: 24px);
+        width: 95%;
     }
 
     .card_buttons {
