--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -50,7 +50,7 @@
             @include font($color: $moonSilver, $weight: 800, $align: left);
             margin-bottom: 1rem;
             margin-left: 10%;
-            margin-top: -5rem;
+            margin-top: 5%;
 
             h1 {
                 text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.6);
