--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -98,10 +98,13 @@ nav {
     .nav_menu {
       @include flex($direction: row);
       @include transition($for: opacity, $time-in: 0.2s, $time-out: 0.2s);
+      @include box-shadow(0px, 0px, 16px, rgba(0, 0, 0, 0.6));
+      width: 250px;
       position: absolute;
       left: 4rem;
       padding: 0.25rem 0;
       opacity: 0;
+      backdrop-filter: blur(25px);
 
       .link_button {
         max-width: 60px;
