--- a/src/styles/components/animations/campfire.scss
+++ b/src/styles/components/animations/campfire.scss
@@ -449,4 +449,13 @@
     z-index: 1;
     bottom: 20%;
   }
+
+  @include for-size(desktop-up) {
+    @include transform(scale(1.2));
+    margin: 3rem 10%;
+
+    .logs {
+      margin-top: 14rem;
+    }
+  }
 }
