--- a/src/styles/components/Cards/aboutCard.scss
+++ b/src/styles/components/Cards/aboutCard.scss
@@ -1,82 +1,91 @@
 @import "../../imports";
 
-// keyframe animation for text fading in
-@keyframes fadein {
-    0% {
-        opacity: 0;
-    }
-    66% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes fadein {
-    0% {
-        opacity: 0;
-    }
-    66% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
 .about_card {
+  @include flex(column);
+  @include width-height(155px, 90px);
+  @include box-shadow(0px, 8px, 16px, rgba(0, 0, 0, 0.6));
+  @include transition($time-in: 250ms, $time-out: 250ms);
+  @include transform(scale(100%));
+  padding: 2rem 0rem;
+  border: 6px solid $maroon;
+  border-radius: 10px;
+  background-color: $peru;
+  overflow: hidden;
+
+  .about_card__icon {
     @include flex(column);
-    @include width-height(150px, 90px);
-    @include box-shadow(0px, 8px, 16px, rgba(0, 0, 0, 0.6));
-    @include transition($time-in: 250ms, $time-out: 250ms);
-    @include transform(scale(100%));
-    padding: 2rem 0rem;
-    border: 6px solid $maroon;
-    border-radius: 10px;
-    background-color: $peru;
+    height: 100%;
+    max-height: 95px;
+    align-self: center;
+    align-items: center;
 
-    .about_card__icon {
-        @include flex(column);
-        align-self: center;
-        align-items: center;
+    i {
+      font-size: 58px;
+      color: $maroonDark;
 
-        i {
-            font-size: 58px;
-            color: $maroonDark;
+      &.fa-file-code {
+        font-size: 55px;
+      }
+    }
+
+    h3 {
+      @include font(
+        $color: $maroonDark,
+        $align: center,
+        $weight: 600,
+        $transform: uppercase
+      );
+    }
+  }
+
+  .about_card__container {
+    display: none;
+    padding: 0 1.75rem;
+  }
+
+  .about_card__content {
+    ul {
+      @include flex(column);
+      justify-content: center;
+      padding: 0;
+      margin: 1rem;
+
+      li {
+        margin: 3px 0;
+
+        &::marker {
+          color: $maroonDark;
         }
+      }
+    }
+  }
 
-        h3 {
-            @include font($color: $maroonDark, $align: center, $weight: 600, $transform: uppercase);
-            margin: 8px 0 0 0;
-        }
+  &:hover {
+    @include transform(scale(105%));
+  }
+
+  &.open {
+    justify-content: flex-start;
+
+    &.code {
+      height: 255px;
+    }
+
+    &.tech {
+      height: 325px;
+    }
+
+    &.programs {
+      height: 275px;
+    }
+
+    &.fun {
+      height: 255px;
     }
 
     .about_card__container {
-        display: none;
-        padding: 0.75rem 0.75rem 0.75rem 1.75rem;
+      display: flex;
+      padding: 0.75rem 0.75rem 0.75rem 1.75rem;
     }
-
-    .about_card__content {
-        transition: 2s;
-        opacity: 0;
-    }
-
-    &:hover {
-        @include transform(scale(105%));
-
-        .about_card__content {
-            opacity: 1;
-        }
-    }
-
-    &.open {
-        height: 200px;
-        justify-content: flex-start;
-
-        .about_card__container {
-            display: flex;
-            padding: 0.75rem 0.75rem 0.75rem 1.75rem;
-        }
-    }
+  }
 }
