--- a/src/styles/components/wrapper.scss
+++ b/src/styles/components/wrapper.scss
@@ -25,8 +25,8 @@
 
         .about_container {
             @include flex(row);
-            margin-top: 5rem;
-            margin-left: 10%;
+            margin: 5rem 10%;
+            column-gap: 5rem;
         }
     }
 
