--- a/src/styles/components/Cards/aboutCard.scss
+++ b/src/styles/components/Cards/aboutCard.scss
@@ -61,7 +61,7 @@
   }
 
   &:hover {
-    @include transform(scale(105%));
+    @include transform(scale(105%), $important: true);
   }
 
   &.open {
