--- a/src/styles/components/animations/campfire.scss
+++ b/src/styles/components/animations/campfire.scss
@@ -1,18 +1,15 @@
 @import "../../imports";
 
 @mixin fireGlow() {
-    box-shadow: 
-    0 0 90px 50px rgba(255, 208, 0, 0.8),
-    0 0 120px 70px rgba(255, 136, 0, 0.9),
-    0 0 160px 100px rgb(185, 99, 0.4);
-    opacity: 0.8;
+  box-shadow: 0 0 90px 50px rgba(255, 208, 0, 0.8),
+    0 0 120px 70px rgba(255, 136, 0, 0.9), 0 0 160px 100px rgb(185, 99, 0.4);
+  opacity: 0.8;
 }
 
 @mixin rockGlow($top: 0, $left: 0) {
-  box-shadow: 
-  inset $top $left 12px rgba(255, 208, 0, 0.6),
-  inset $top $left 12px rgba(255, 136, 0, 0.4),
-  inset $top $left 12px rgb(185, 99, 0.2);
+  box-shadow: inset $top $left 12px rgba(255, 208, 0, 0.6),
+    inset $top $left 12px rgba(255, 136, 0, 0.4),
+    inset $top $left 12px rgb(185, 99, 0.2);
   opacity: 0.8;
 }
 
@@ -96,6 +93,13 @@
   }
 }
 
+.campfire_container {
+  position: fixed;
+  z-index: 10;
+  right: 0;
+  bottom: 38%;
+}
+
 .campfire {
   .smoke {
     @include width-height(630px, 400px);
@@ -103,8 +107,16 @@
     position: absolute;
     bottom: 30%;
     right: -200px;
-    -webkit-mask-image: linear-gradient(to top, rgb(255, 255, 255) 30%, rgba(112, 112, 112, 0));
-    mask-image: linear-gradient(to top, rgb(255, 255, 255) 30%, rgba(112, 112, 112, 0));
+    -webkit-mask-image: linear-gradient(
+      to top,
+      rgb(255, 255, 255) 30%,
+      rgba(112, 112, 112, 0)
+    );
+    mask-image: linear-gradient(
+      to top,
+      rgb(255, 255, 255) 30%,
+      rgba(112, 112, 112, 0)
+    );
     -webkit-mask-size: 100% 100%;
     mask-size: 100% 100%;
     -webkit-mask-repeat: no-repeat;
@@ -357,25 +369,49 @@
     top: 60%;
     right: 280px;
 
-    .rock_big_1, .rock_big_2, .rock_big_3, .rock_big_4, .rock_big_5 {
+    .rock_big_1,
+    .rock_big_2,
+    .rock_big_3,
+    .rock_big_4,
+    .rock_big_5 {
       position: absolute;
       z-index: 3;
       top: 180px;
-      background-image: radial-gradient(circle at bottom right, $rockLight, $rockDark);
+      background-image: radial-gradient(
+        circle at bottom right,
+        $rockLight,
+        $rockDark
+      );
       border-radius: 95px 95px 0 0;
     }
 
     .rock_big {
-      &_5, &_4 {
-        @include box-shadow($top: 20px, $left: -30px, $blur: 26px, $inset: true);
+      &_5,
+      &_4 {
+        @include box-shadow(
+          $top: 20px,
+          $left: -30px,
+          $blur: 26px,
+          $inset: true
+        );
       }
-      &_1, &_2 {
-        @include box-shadow($top: -20px, $left: -30px, $blur: 26px, $inset: true);
+      &_1,
+      &_2 {
+        @include box-shadow(
+          $top: -20px,
+          $left: -30px,
+          $blur: 26px,
+          $inset: true
+        );
       }
       &_3 {
         @include box-shadow($left: -20px, $blur: 26px, $inset: true);
       }
-      &_1:before, &_2:before, &_3:before, &_4:before, &_5:before {
+      &_1:before,
+      &_2:before,
+      &_3:before,
+      &_4:before,
+      &_5:before {
         @include box-shadow($blur: 30px, $color: #000);
         content: "";
         position: absolute;
@@ -387,55 +423,60 @@
         animation-fill-mode: both;
       }
       &_1:before {
-          @include width-height($width: 76px, $height: 18px);
-          @include transform(skewX(70deg));
-          margin-top: 56px;
-          left: 42px;
+        @include width-height($width: 76px, $height: 18px);
+        @include transform(skewX(70deg));
+        margin-top: 56px;
+        left: 42px;
       }
       &_2:before {
         @include width-height($width: 74px, $height: 18px);
         @include transform(skewX(60deg));
         margin-top: 45px;
         left: 21px;
-    }
-    &_3:before {
-      @include width-height($width: 74px, $height: 18px);
-      margin-top: 58px;
-      left: 12px;
-    }
-    &_4:before {
-      @include width-height($width: 75px, $height: 18px);
-      @include transform(skewX(-35deg));
-      margin-top: 47px;
-      left: -9px;
-    }
-    &_5:before {
-      @include width-height($width: 95px, $height: 18px);
-      @include transform(skewX(-65deg));
-      margin-top: 54px;
-      left: -19px;
-    }
-      &_1, &_1_glow {
+      }
+      &_3:before {
+        @include width-height($width: 74px, $height: 18px);
+        margin-top: 58px;
+        left: 12px;
+      }
+      &_4:before {
+        @include width-height($width: 75px, $height: 18px);
+        @include transform(skewX(-35deg));
+        margin-top: 47px;
+        left: -9px;
+      }
+      &_5:before {
+        @include width-height($width: 95px, $height: 18px);
+        @include transform(skewX(-65deg));
+        margin-top: 54px;
+        left: -19px;
+      }
+      &_1,
+      &_1_glow {
         @include width-height($width: 95px, $height: 56px);
         top: 180px;
         right: -140px;
       }
-      &_2, &_2_glow {
+      &_2,
+      &_2_glow {
         @include width-height($width: 80px, $height: 45px);
         top: 190px;
         right: -65px;
       }
-      &_3, &_3_glow {
+      &_3,
+      &_3_glow {
         @include width-height($width: 85px, $height: 58px);
         top: 176px;
         right: 10px;
       }
-      &_4, &_4_glow {
+      &_4,
+      &_4_glow {
         @include width-height($width: 70px, $height: 48px);
         top: 185px;
         right: 80px;
       }
-      &_5, &_5_glow {
+      &_5,
+      &_5_glow {
         @include width-height($width: 90px, $height: 54px);
         top: 179px;
         right: 145px;
@@ -452,8 +493,6 @@
 
   @include for-size(desktop-up) {
     @include transform(scale(1.2));
-    margin: 3rem 10%;
-
     .logs {
       margin-top: 14rem;
     }
