--- a/src/styles/components/wrapper.scss
+++ b/src/styles/components/wrapper.scss
@@ -25,21 +25,92 @@
 
   // contact page
   .contact_container {
-    @include flex(column);
+    @include flex(row);
     margin: 5rem 10%;
-    column-gap: 5rem;
+    width: 60%;
+    column-gap: 4rem;
+    min-height: 33rem;
 
     form {
       @include flex(column);
-      width: 40%;
+      border-radius: 4px;
+      background-color: rgba(72, 72, 72, 0.4);
+      padding: 35px 35px 30px 35px;
+      width: 80%;
 
-      input[type="submit"] {
+      input,
+      textarea {
+        @include font($color: $offBlack, $size: 13px, $weight: 500);
+        margin-bottom: 0.75rem;
+        padding: 0.5rem 1rem;
+      }
+
+      .submit_button {
         @include flex($direction: row);
-        @include font($color: $moonSilver, $size: 18px, $weight: 300, $decoration: none);
-        @include border-outline($noBorder: true, $noOutline: true);
-
-        align-items: baseline;
+        @include border-outline(
+          $noOutline: true,
+          $borderStyle: solid,
+          $borderWidth: 1px,
+          $borderColor: $moonSilver,
+          $borderRadius: 4px
+        );
+        @include transition($time-in: 250ms, $time-out: 250ms);
+        @include transform(scale(100%));
         background-color: transparent;
+        align-items: baseline;
+        max-width: min-content;
+        cursor: pointer;
+
+        * {
+          cursor: pointer;
+        }
+
+        > input {
+          @include border-outline($noOutline: true, $noBorder: true);
+          @include font($color: $moonSilver, $size: 18px, $weight: 300, $decoration: none);
+          background-color: transparent;
+          margin: 0;
+        }
+
+        > i {
+          @include font($color: $moonSilver, $size: 16px, $weight: 700, $decoration: none);
+          padding-right: 15px;
+        }
+
+        &:hover {
+          background-color: $moonSilver;
+          @include transform(scale(105%), $important: true);
+
+          input,
+          i {
+            color: $nightBlue;
+          }
+        }
+      }
+
+      textarea {
+        resize: none;
+      }
+
+      span {
+        @include font($tracking: 0.8px, $size: 12px, $weight: 500);
+        margin-top: -0.5rem;
+        margin-bottom: 0.75rem;
+
+        &.message-chars-left {
+          color: $moonSilver;
+        }
+      }
+    }
+
+    > div:nth-child(2) {
+      @include flex(column);
+      min-width: 350px;
+      align-self: center;
+      margin-bottom: 15px;
+
+      .buttons {
+        row-gap: 1rem;
       }
     }
   }
