--- a/src/styles/components/animations/campfire.scss
+++ b/src/styles/components/animations/campfire.scss
@@ -466,6 +466,7 @@
   }
 
   @include for-size(desktop-up) {
-    @include transform(scale(1.2));
+    @include transform(scale(1.1));
+    right: -4rem;
   }
 }
