--- a/src/styles/components/linkButton.scss
+++ b/src/styles/components/linkButton.scss
@@ -41,6 +41,14 @@
     }
   }
 
+  &.download a::before {
+    width: 112px;
+  }
+
+  &.github a::before {
+    width: 90px;
+  }
+
   i {
     @include font($color: $moonSilver, $size: 24px);
     @include transition;
@@ -72,7 +80,7 @@
       width: 95px;
     }
     &.link a:hover::before {
-      width: 90px;  
+      width: 90px; 
     }
   }
 }
