--- a/src/styles/components/subtitle.scss
+++ b/src/styles/components/subtitle.scss
@@ -19,5 +19,9 @@
   &.contact_subtitle__links {
     @include font($size: 18px, $color: $peru, $weight: 100);
     text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+
+    &:nth-child(3) {
+      margin-top: 1rem;
+    }
   }
 }
