page transition animations

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import "./styles/components/header.scss";
 @import "./styles/components/subtitle.scss";
 @import "./styles/components/linkButton.scss";
+@import "./styles/components/downloadButton.scss";
 @import "./styles/components/navigation.scss";
 
 @import "./styles/components/Cards/contentCard.scss";
