--- a/src/styles/components/Cards/contentcard.scss
+++ b/src/styles/components/Cards/contentcard.scss
@@ -32,6 +32,7 @@
     p {
         @include font($size: 16px, $color: $moonSilver, $weight: 400, $align: left, $leading: 24px);
         width: 95%;
+        z-index: 50;
     }
 
     .card_buttons {
