--- a/src/styles/components/Cards/aboutCard.scss
+++ b/src/styles/components/Cards/aboutCard.scss
@@ -29,12 +29,7 @@
     }
 
     h3 {
-      @include font(
-        $color: $maroonDark,
-        $align: center,
-        $weight: 600,
-        $transform: uppercase
-      );
+      @include font($color: $maroonDark, $align: center, $weight: 600, $transform: uppercase);
     }
   }
 
@@ -86,6 +81,43 @@
     .about_card__container {
       display: flex;
       padding: 0.75rem 0.75rem 0.75rem 1.75rem;
+    }
+  }
+}
+
+@include for-size(phone-only) {
+  #about {
+    overflow: scroll;
+
+    .about_card {
+      @include width-height($width: 10rem, $height: 6.5rem);
+      padding: 1rem 2rem;
+      flex-direction: row;
+      min-width: min-content;
+      height: unset;
+      min-height: min-content;
+
+      &:hover {
+        transform: unset!important;
+      }
+
+      .about_card__icon {
+        margin: auto;
+        max-height: 75px;
+
+        h3 {
+          margin: 0.5rem;
+        }
+
+        i {
+          font-size: 40px;
+        }
+      }
+
+      .about_card__container {
+        display: flex;
+        padding-right: 0;
+      }
     }
   }
 }
