--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -71,3 +71,21 @@
     }
   }
 }
+
+@include for-size(phone-only) {
+  .header_about__hero {
+    top: 10rem;
+  }
+
+  .header_main__hero .buttons {
+    flex-direction: column;
+
+    .link_button:first-child {
+      margin-bottom: 1rem;
+    }
+
+    .link_button:nth-child(2) {
+      padding-left: 7px;
+    }
+  }
+}
