--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -160,19 +160,32 @@ nav {
   }
 }
 
-// .background_3 nav .navigation {
-//   .nav_button span {
-//     background-color: $maroon !important;
-//   }
+@include for-size(phone-only) {
+  nav .navigation {
+    .nav_button {
+      background-color: #010b12;
+      border-radius: 10px;
+      transform: translateY(-12px);
 
-//   .nav_menu .link_button {
-//     a {
-//       @include box-shadow(0px, 8px, 16px, rgba(0, 0, 0, 0.6));
-//       background-color: #010e17;
-//       backdrop-filter: blur(6px) brightness(130%);
-//       margin-top: -5px;
-//       padding: 5px 10px;
-//       border-radius: 4px;
-//     }
-//   }
-// }
+      span {
+        &:nth-child(1) {
+          top: 18px!important;
+        }
+        &:nth-child(2) {
+          top: 18px!important;
+        }
+        &:nth-child(5) {
+          top: 38px!important;
+        }
+        &:nth-child(5), &:nth-child(6) {
+          top: 2.1rem!important;
+        }
+      }
+    }
+
+    .nav_menu {
+      backdrop-filter: unset;
+      background-color: #010b12;
+    }
+  }
+}
