--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -77,6 +77,10 @@
     top: 10rem;
   }
 
+  .header_main__hero {
+    width: 80%;
+  }
+
   .header_main__hero .buttons {
     flex-direction: column;
 
