--- a/src/styles/components/wrapper.scss
+++ b/src/styles/components/wrapper.scss
@@ -3,7 +3,6 @@
 .wrapper.background {
   @include flex($direction: column);
   @include width-height($width: 100%, $height: 100%, $maxHeight: min-content);
-  @include scrollbars(0.5em, slategray);
   justify-content: center;
   position: fixed;
   background-color: #010b12;
@@ -38,7 +37,6 @@
     width: 60%;
     column-gap: 4rem;
     min-height: 40rem;
-    flex-wrap: wrap;
 
     form {
       @include flex(column);
@@ -128,13 +126,15 @@
   // work page
   #work {
     overflow-y: scroll;
+    @include scrollbars(0.5em, slategray);
 
     .work_container {
       @include flex(row);
-      margin: -5.5rem 0 -5.5rem 9rem;
+      margin: 1.5rem 0 -5.5rem 1rem;
       padding-bottom: 5rem;
       align-items: center;
       flex-wrap: wrap;
+      column-gap: 4rem;
 
       .cards_work_1,
       .cards_work_2 {
@@ -142,11 +142,8 @@
         width: 40%;
         justify-content: flex-end;
         align-items: baseline;
-      }
-
-      .cards_work_2 {
-        margin-top: 8.5rem;
-        margin-right: 20%;
+        padding: 0 1rem;
+        flex-wrap: wrap;
       }
     }
 
@@ -178,10 +175,24 @@
   }
 }
 
+@include for-size(tablet-landscape-up) {
+  .wrapper.background #work .work_container {
+    margin: 1.5rem 0 -5.5rem 9rem;
+  }
+}
+
 @include for-size(phone-only) {
   .wrapper.background {
     > .wrapper[id] {
-      padding: 10rem 0;
+      overflow-y: scroll;
+    }
+
+    > #main {
+      margin-top: -6rem;
+    }
+
+    #about {
+      margin-top: 2rem;
     }
 
     .about_container {
@@ -224,6 +235,8 @@
     }
 
     #contact .contact_container {
+      flex-wrap: wrap;
+
       > div:nth-child(2) {
         margin-top: 0;
       }
