--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -27,14 +27,7 @@
 }
 
 // div sizing
-@mixin width-height(
-  $width: null,
-  $height: null,
-  $minWidth: null,
-  $maxWidth: null,
-  $minHeight: null,
-  $maxHeight: null
-) {
+@mixin width-height($width: null, $height: null, $minWidth: null, $maxWidth: null, $minHeight: null, $maxHeight: null) {
   width: $width;
   height: $height;
   min-width: $minWidth;
@@ -93,13 +86,7 @@
 }
 
 // transforms, translates, etc
-@mixin transition(
-  $for: all,
-  $time-in: 250ms,
-  $type: ease-in-out,
-  $time-out: 0s,
-  $delay: 0s
-) {
+@mixin transition($for: all, $time-in: 250ms, $type: ease-in-out, $time-out: 0s, $delay: 0s) {
   transition: $for $time-in $type $time-out;
   -moz-transition: $for $time-in $type $time-out;
   -webkit-transition: $for $time-in $type $time-out;
@@ -116,13 +103,7 @@
 }
 
 // shadows
-@mixin box-shadow(
-  $top: 0,
-  $left: 0px,
-  $blur: 12px,
-  $color: rgba(0, 0, 0, 0.4),
-  $inset: false
-) {
+@mixin box-shadow($top: 0, $left: 0px, $blur: 12px, $color: rgba(0, 0, 0, 0.4), $inset: false) {
   @if $inset {
     -webkit-box-shadow: inset $top $left $blur $color;
     -moz-box-shadow: inset $top $left $blur $color;
@@ -150,11 +131,7 @@
 }
 
 // scrollbars
-@mixin scrollbars(
-  $size,
-  $foreground-color,
-  $background-color: mix($foreground-color, white, 50%)
-) {
+@mixin scrollbars($size, $foreground-color, $background-color: mix($foreground-color, white, 50%)) {
   // For Google Chrome
   &::-webkit-scrollbar {
     width: $size;
@@ -188,6 +165,10 @@
     }
   } @else if $size == tablet-landscape-up {
     @media (min-width: 900px) {
+      @content;
+    }
+  } @else if $size == desktop-down {
+    @media (max-width: 1100px) {
       @content;
     }
   } @else if $size == desktop-up {
