--- a/src/styles/components/Cards/contentcard.scss
+++ b/src/styles/components/Cards/contentcard.scss
@@ -57,3 +57,9 @@
         backdrop-filter: blur(3px) brightness(150%);
     }
 }
+
+@include for-size(phone-only) {
+    .card h3 {
+        width: 80%;
+    }
+}
