--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -82,7 +82,7 @@
     top: 10rem;
   }
 
-  .header_main__hero {
+  .header_main__hero, .header_about__hero, .header_contact__hero, .header_work__hero {
     width: 80%;
   }
 
