--- a/src/styles/components/animations/campfire.scss
+++ b/src/styles/components/animations/campfire.scss
@@ -474,6 +474,13 @@
   }
 }
 
+@include for-size(tablet-portrait-up) {
+  .campfire_container {
+    bottom: 25%;
+    right: -6rem;
+  }
+}
+
 @include for-size(phone-only) {
   .campfire_container {
     transform: scale(0.6);
@@ -510,7 +517,7 @@
   }
 
   #contact ~ .campfire_container .campfire {
-    @include transition($time-in: 0.8 s, $time-out: 0.8  s);
+    @include transition($time-in: 0.8 s, $time-out: 0.8 s);
     transform: scale(0.8) translateX(500px);
   }
 }
