--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -160,7 +160,7 @@
       @content;
     }
   } @else if $size == tablet-portrait-up {
-    @media (min-width: 600px) {
+    @media (min-width: 600px) and (max-width: 1100px) {
       @content;
     }
   } @else if $size == tablet-landscape-up {
