--- a/src/styles/components/Cards/contentcard.scss
+++ b/src/styles/components/Cards/contentcard.scss
@@ -22,6 +22,13 @@
         }
     }
 
+    .logo_bg {
+        @include width-height($width: 100px, $height: 100px);
+        min-height: 100px;
+        border-radius: 100%;
+        background: white;
+    }
+
     h3 {
         @include font($size: 30px, $color: $moonSilver, $weight: 800, $align: left);
         width: 95%;
