--- a/src/styles/components/Cards/contentcard.scss
+++ b/src/styles/components/Cards/contentcard.scss
@@ -12,9 +12,8 @@
     border-radius: 10px;
 
     .card_1__img {
-        @include width-height($width: 90px, $maxWidth: 90px, $height: 90px, $maxHeight: 90px);
         position: absolute;
-        right: -0.75rem;
+        right: -2rem;
         top: -0.75rem;
 
         img {
@@ -23,7 +22,7 @@
     }
 
     .logo_bg {
-        @include width-height($width: 100px, $height: 100px);
+        @include width-height($width: 130px, $maxWidth: 130px, $minWidth: 130px, $height: 130px, $maxHeight: 130px, $minHeight: 130px);
         min-height: 100px;
         border-radius: 100%;
         background: white;
@@ -34,6 +33,7 @@
         width: 95%;
         filter: brightness(105%);
         margin: 0;
+        margin-top: 15%;
     }
 
     p {
@@ -62,6 +62,12 @@
     &:hover {
         @include transform(scale(102%), $important: true);
         backdrop-filter: blur(3px) brightness(150%);
+    }
+}
+
+@include for-size(tablet-landscape-up) {
+    .card .card_1__img {
+        @include width-height($width: 130px, $maxWidth: 130px, $minWidth: 130px, $height: 130px, $maxHeight: 130px, $minHeight: 130px);
     }
 }
 
