--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,14 @@
 @import "./styles/imports";
 
 // animations
-@import "./styles/components/animations/nightmode/campfire.scss";
-@import "./styles/components/animations/nightmode/stars.scss";
+@import "./styles/components/animations/darkmode/campfire.scss";
+@import "./styles/components/animations/darkmode/stars.scss";
+
+// pages
+@import "./styles/pages/about.scss";
+@import "./styles/pages/contact.scss";
+@import "./styles/pages/main.scss";
+@import "./styles/pages/work.scss";
 
 // interactive components
 @import "./styles/components/interactive/buttons/linkButton.scss";
@@ -18,6 +24,8 @@
 // typography components
 @import "./styles/components/typography/subtitle.scss";
 
+// themes
+@import "./styles/themes/darkTheme/darkTheme.scss";
 
 // globals
 body {
@@ -26,10 +34,6 @@ body {
 
 h1 {
   @include font($size: 75px);
-  &::selection {
-    background: $fireBright;
-    color: $offBlack;
-  }
 }
 
 h2 {
@@ -55,12 +59,9 @@ textarea {
   @include font($family: $body);
 }
 
-.flex_row {
-  @include flex(row);
-}
-
-.flex_column {
-  @include flex(column);
+.scroll {
+  overflow-y: scroll;
+  @include scrollbars(0.5em, slategray);
 }
 
 @include for-size(phone-only) {
