--- a/src/styles/components/layout/cards/contentcard.scss
+++ b/src/styles/components/layout/cards/contentcard.scss
@@ -11,7 +11,7 @@
   margin: 1rem;
   border-radius: 10px;
 
-  .card_1__img {
+  .card_img {
     position: absolute;
     right: -2rem;
     top: -0.75rem;
@@ -44,13 +44,7 @@
   }
 
   p {
-    @include font(
-      $size: 16px,
-      $color: $moonSilver,
-      $weight: 400,
-      $align: left,
-      $leading: 24px
-    );
+    @include font($size: 16px, $color: $moonSilver, $weight: 400, $align: left, $leading: 24px);
     width: 95%;
     z-index: 50;
   }
@@ -79,7 +73,7 @@
 }
 
 @include for-size(tablet-landscape-up) {
-  .card .card_1__img {
+  .card .card_img {
     @include width-height(
       $width: 130px,
       $maxWidth: 130px,
