--- a/src/styles/components/layout/header.scss
+++ b/src/styles/components/layout/header.scss
@@ -2,10 +2,11 @@
 
 header.header_hero {
   width: calc(100vw - 60%);
-  margin-left: 10%;
+  z-index: 50;
+  position: relative;
 
   h1 {
-    @include font($size: 75px, $color: $fireBright, $weight: 800, $align: left);
+    @include font($weight: 800, $align: left);
     text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
     margin-bottom: 0;
     line-height: 64px;
@@ -24,41 +25,10 @@ header.header_hero {
       }
     }
   }
-
-  &.work {
-    margin-top: 8rem;
-    margin-bottom: 1rem;
-
-    h1 {
-    @include font($color: $moonSilver);
-      text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.6);
-
-      &::selection {
-        background: $moonSilver;
-        color: $offBlack;
-      }
-    }
-  }
 }
 
 @include for-size(phone-only) {
-  .header_about__hero {
-    top: 10rem;
-  }
-
   &[class*="__hero"] {
     width: 80%;
-  }
-
-  .header_main__hero .buttons {
-    flex-direction: column;
-
-    .link_button:first-child {
-      margin-bottom: 1rem;
-    }
-
-    .link_button:nth-child(2) {
-      padding-left: 7px;
-    }
   }
 }
